# agentcraft-mcp

./: README.md  pyproject.toml  requirements.txt  server.json  setup.py
agentcraft_mcp/: __init__.py  agent_manager.py  agents.yaml  config.py  data_processor.py  http_client.py  server.py  tools.py
